--- a/.gitconfig
+++ b/.gitconfig
@@ -4,3 +4,5 @@
 [color]
     ui = true
     diff = true
+[alias]
+    lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
