--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,18 @@
+*.sublime-project
+*.sublime-workspace
+._*
+.AppleDouble
 .buildpath
+.DS_Store
+.LSOverride
 .metadata
 .project
 .settings
-
-.DS_Store
-
+.Spotlight-V100
 .svn/
-
-*.sublime-workspace
-
-npm-debug.log
-node_modules
-
-_notes/
+.Trashes
+_notes
 dwsync.xml
+Icon
+node_modules
+npm-debug.log
